--- a/theme/menu.css
+++ b/theme/menu.css
@@ -100,7 +100,7 @@
   height: 56px;
   line-height: 56px;
   font-size: 14px;
-  color: rgb(72, 87, 106);
+  color: rgb(106, 77, 72);
   padding: 0 20px;
   cursor: pointer;
   position: relative;
@@ -115,7 +115,7 @@
   position: relative;
   margin: 0;
   padding-left: 0;
-  background-color: rgb(238, 241, 246);
+  background-color: rgb(246, 240, 238);
 }
 
 .el-menu li{
@@ -123,23 +123,23 @@
 }
 
 .el-menu--dark{
-  background-color: rgb(50, 65, 87);
+  background-color: rgb(87, 57, 50);
 }
 
 .el-menu--dark .el-menu-item, .el-menu--dark .el-submenu__title{
-  color: rgb(191, 203, 217);
+  color: rgb(217, 193, 191);
 }
 
 .el-menu--dark .el-menu-item:hover, .el-menu--dark .el-submenu__title:hover{
-  background-color: rgb(72, 87, 106);
+  background-color: rgb(106, 77, 72);
 }
 
 .el-menu--dark .el-submenu .el-menu{
-  background-color: rgb(31, 45, 61);
+  background-color: rgb(61, 34, 31);
 }
 
 .el-menu--dark .el-submenu .el-menu .el-menu-item:hover{
-  background-color: rgb(72, 87, 106);
+  background-color: rgb(106, 77, 72);
 }
 
 .el-menu--horizontal{}
@@ -160,7 +160,7 @@
 }
 
 .el-menu--horizontal .el-menu-item:hover{
-  background-color: rgb(209, 219, 229);
+  background-color: rgb(229, 211, 209);
 }
 
 .el-menu--horizontal .el-submenu{
@@ -172,7 +172,7 @@
   position: absolute;
   top: 65px;
   left: 0;
-  border: 1px solid rgb(209, 219, 229);
+  border: 1px solid rgb(229, 211, 209);
   padding: 5px 0;
   background-color: #fff;
   z-index: 100;
@@ -198,47 +198,45 @@
   position: static;
   vertical-align: middle;
   margin-left: 5px;
-  color: rgb(151, 168, 190);
+  color: rgb(190, 157, 151);
   margin-top: -3px;
 }
 
 .el-menu--horizontal .el-menu-item:hover, .el-menu--horizontal .el-submenu__title:hover{
-  background-color: rgb(238, 241, 246);
+  background-color: rgb(246, 240, 238);
 }
 
 .el-menu--horizontal > .el-menu-item:hover, .el-menu--horizontal > .el-submenu:hover .el-submenu__title, .el-menu--horizontal > .el-submenu.is-active .el-submenu__title{
-  border-bottom: 5px solid #20a0ff;
+  border-bottom: 5px solid red;
 }
 
 .el-menu--horizontal.el-menu--dark{}
 
 .el-menu--horizontal.el-menu--dark .el-menu-item:hover, .el-menu--horizontal.el-menu--dark .el-submenu__title:hover{
-  background-color: rgb(50, 65, 87);
+  background-color: rgb(87, 57, 50);
 }
 
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item, .el-menu--horizontal.el-menu--dark .el-submenu .el-submenu-title{
-  color: rgb(72, 87, 106);
+  color: rgb(106, 77, 72);
 }
 
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item:hover, .el-menu--horizontal.el-menu--dark .el-submenu .el-submenu-title:hover{
-  background-color: rgb(209, 219, 229);
+  background-color: rgb(229, 211, 209);
 }
 
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item.is-active{
-  color: #20a0ff;
+  color: red;
 }
 
 .el-menu--collapse{
   width: 64px;
 }
 
-.el-menu--collapse > .el-menu-item, .el-menu--collapse > .el-submenu > .el-submenu__title {
-  text-align: center;
-}
-
 .el-menu--collapse > .el-menu-item [class^="el-icon-"], .el-menu--collapse > .el-submenu > .el-submenu__title [class^="el-icon-"] {
   margin: 0;
   vertical-align: middle;
+  width: 24px;
+  text-align: center;
 }
 
 .el-menu--collapse > .el-menu-item .el-submenu__icon-arrow, .el-menu--collapse > .el-submenu > .el-submenu__title .el-submenu__icon-arrow {
@@ -270,8 +268,13 @@
 }
 
 .el-menu-item [class^="el-icon-"]{
-  vertical-align: baseline;
-  margin-right: 10px;
+  margin-right: 5px;
+  width: 24px;
+  text-align: center;
+}
+
+.el-menu-item *{
+  vertical-align: middle;
 }
 
 .el-menu-item:first-child{
@@ -283,20 +286,22 @@
 }
 
 .el-menu-item:hover{
-  background-color: rgb(209, 219, 229);
+  background-color: rgb(229, 211, 209);
 }
 
 .el-menu-item.is-active{
-  color: #20a0ff;
+  color: red;
 }
 
 .el-submenu [class^="el-icon-"]{
-  vertical-align: baseline;
-  margin-right: 10px;
+  vertical-align: middle;
+  margin-right: 5px;
+  width: 24px;
+  text-align: center;
 }
 
 .el-submenu .el-menu{
-  background-color: rgb(228, 232, 241);
+  background-color: rgb(241, 231, 228);
 }
 
 .el-submenu .el-menu-item{
@@ -307,7 +312,7 @@
 }
 
 .el-submenu .el-menu-item:hover{
-  background-color: rgb(209, 219, 229);
+  background-color: rgb(229, 211, 209);
 }
 
 .el-submenu.is-opened > .el-submenu__title .el-submenu__icon-arrow{
@@ -315,7 +320,7 @@
 }
 
 .el-submenu.is-active .el-submenu__title{
-  border-bottom-color: #20a0ff;
+  border-bottom-color: red;
 }
 
 .el-submenu__title{
@@ -323,7 +328,11 @@
 }
 
 .el-submenu__title:hover{
-  background-color: rgb(209, 219, 229);
+  background-color: rgb(229, 211, 209);
+}
+
+.el-submenu__title *{
+  vertical-align: middle;
 }
 
 .el-submenu__icon-arrow{
@@ -344,7 +353,12 @@
   line-height: normal;
   font-size: 14px;
   padding-left: 20px;
-  color: rgb(151, 168, 190);
+  color: rgb(190, 157, 151);
+}
+
+.horizontal-collapse-transition .el-submenu__title .el-submenu__icon-arrow {
+  transition: .2s;
+  opacity: 0;
 }
 :root{
   /* Transition
